tests/analyzer/invalid/0009_complexity_issues.tj
def veryLongFunctionNameThatExceedsReasonableLength() -> int {
    return 42
}

def complexFunction(x: int) -> int {
    if (x > 0) {
        if (x < 10) {
            if (x % 2 == 0) {
                if (x > 5) {
                    if (x < 8) {
                        return x * 2
                    }
                }
            }
        }
    }
    return x
}
